[gd_scene load_steps=2 format=3 uid="uid://8hohnyl0u21w"]

[ext_resource type="Script" path="res://Nodes/Children/Scripts/boneWeightsScene.gd" id="1_x3a5h"]

[node name="boneWeightScene" type="PanelContainer"]
offset_right = 305.0
offset_bottom = 31.0
script = ExtResource("1_x3a5h")

[node name="boneWeightContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="dataContainer" type="VBoxContainer" parent="boneWeightContainer"]
layout_mode = 2

[node name="boneWeight" type="HBoxContainer" parent="boneWeightContainer/dataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="boneWeightContainer/dataContainer/boneWeight"]
layout_mode = 2
text = "   boneWeight"

[node name="Space" type="Control" parent="boneWeightContainer/dataContainer/boneWeight"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="boneWeightLine" type="LineEdit" parent="boneWeightContainer/dataContainer/boneWeight"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
text = "0.0"
placeholder_text = "0.0"
alignment = 2
max_length = 20

[connection signal="text_changed" from="boneWeightContainer/dataContainer/boneWeight/boneWeightLine" to="." method="_on_bone_weight_line_text_changed"]
